Added multiple apps as sonar sources

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,6 @@ sonar.projectVersion=1.0
 # Use commas to specify more than one file/folder.
 # It is good practice to add pubspec.yaml to the sources as the analyzer
 # may produce warnings for this file as well.
-sonar.sources=lib
 #sonar.tests=test
 
 # Encoding of the source code. Default is default system encoding.
@@ -31,4 +30,18 @@ sonar.sourceEncoding=UTF-8
 # - DETECT (attempt to detect automatically, requires Dart SDK on the PATH) - default
 # - MACHINE (a new machine readable output that is available for Dart 2.12+)
 # - LEGACY (attempts to parse human readable output from dart/flutter) - default
-# sonar.dart.analyzer.report.mode= 
+# sonar.dart.analyzer.report.mode=
+
+
+
+
+sonar.modules=mylib,distributor,retailer
+
+# mylib
+mylib.sonar.sources=lib
+
+# distributor
+distributor.sonar.sources=/apps/distributor/lib
+
+# retailer
+retailer.sonar.sources=/apps/retailer/lib
