--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,8 +22,6 @@ jobs:
       with:
         flutter-version: '3.7.7'
         channel: 'stable'
-    - run: cd apps/distributor
-    - run: flutter pub get
-    - run: flutter test
-    - run: flutter build apk
+    - run: melos bs
+    - run: melos run build:distributor
     
