--- a/melos.yaml
+++ b/melos.yaml
@@ -9,3 +9,21 @@ packages:
 scripts:
   analyze:
     exec: dart analyze
+  build:distributor:
+    run: |
+      melos exec -c 6 --fail-fast -- \
+        "flutter build apk"
+    description: Build distributor android app.
+    packageFilters:
+      dirExists:
+        - android
+      scope: 'distributor'
+    test:distributor:
+      run: |
+        melos exec -c 6 --fail-fast -- \
+          "flutter test"
+      description: test distributor app.
+      packageFilters:
+      dirExists:
+        - test
+      scope: 'distributor'
