--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: subosito/flutter-action@v2
       with:
+        dart-version: '3.0.6'
         flutter-version: '3.7.7'
         channel: 'stable'
     - run: dart pub global activate melos
