--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,10 +20,12 @@ jobs:
     - uses: actions/checkout@v3
     - uses: subosito/flutter-action@v2
       with:
-        dart-version: '3.0.6'
         flutter-version: '3.7.7'
         channel: 'stable'
-    - run: dart pub global activate melos
-    - run: melos bs
-    - run: melos run build:distributor
+    - run: |
+        cd apps/distributor
+        flutter test
+    - run: |
+        cd apps/distributor
+        flutter build apk
     
