--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ name: pharmarack_demo_app
 environment:
   sdk: ">=2.18.0 <3.0.0"
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   melos: ^3.1.1
   flutter_lints: ^2.0.0
 dependencies:
