Fix tests and add melos script for test

--- a/melos.yaml
+++ b/melos.yaml
@@ -1,7 +1,6 @@
 name: pharmarack_demo_app
 
 packages:
-  - "**"
   - packages/*
   - apps/*
 
@@ -12,6 +11,12 @@ scripts:
 
   pub_get:
     exec: flutter pub get
+
+  clean:
+    exec: flutter clean
+
+  test:
+    exec: flutter test
 
   integration_test:
     exec: flutter test integration_test
