--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Dart
+name: Run checks and Build APK
 
 on:
   push:
@@ -12,20 +12,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  run_checks_and_build_apk:
     runs-on: ubuntu-latest
-
-    
     steps:
-    - uses: actions/checkout@v3
-    - uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.7.7'
-        channel: 'stable'
-    - run: |
-        cd apps/distributor
-        flutter test
-    - run: |
-        cd apps/distributor
-        flutter build apk
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.7.7'
+          channel: 'stable'
+      - name: Run tests
+        run: |
+          dart pub global activate melos
+          melos bootstrap
+          melos pub_get
+          melos test
+      - name: Build APK
+        run: |
+          cd apps/distributor
+          flutter build apk
     
